# national-id-validator

./: .pre-commit-config.yaml  README.md  db.sqlite3  pyproject.toml
.github/workflows/: ruff.yml  test.yml
core/: egyptian_national_id.py  exceptions.py  tests.py  tests_egyptian_national_id.py  tests_views.py  urls.py  views.py
national_id_validator/: asgi.py  settings.py  urls.py  wsgi.py
